test/fixtures/type-error/noOverload2.ro
type i32 = ???

fun x(): i32 = 1
fun x(a: i32): i32 = 1

export fun test(): i32 = x(1.0)
